--- a/Sproutify/static/styles.css
+++ b/Sproutify/static/styles.css
@@ -26,8 +26,16 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-h1, h3 {
+h3 {
     text-align: center;
+}
+
+h1 {
+    font-family: 'Apple Chancery', cursive;
+    font-size: 2.5em; /* Adjust the size as needed */
+    text-align: center;
+    color: #4CAF50; /* Optional: Add a color to match your theme */
+    margin-bottom: 20px;
 }
 
 form {
